<resources>
    <string name="app_name">CloudNotes</string>
    <string name="action_settings">登出账户</string>
    <string name="sync">sync</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="anquan">隐私与安全</string>
    <string name="biji">笔记设置</string>
    <string name="info">关于云笔记</string>
    <string name="xiezuo">云协作企业版</string>
    <string name="xiwang">你希望云协作支持哪些文件类型</string>
    <string name="xiaoxi">消息中心</string>
    <string name="jinru">进入消息中心</string>
    <string name="yijian">意见反馈</string>
    <string name="diaocha">用户满意度调查</string>
    <string name="jinruxiaoxizhongxin">进入消息中心</string>
    <string name="user">账 号：</string>
    <string name="yonghuming">请输入用户名</string>
    <string name="mima">密 码：</string>
    <string name="shuru">请输入密码</string>
    <string name="denglu">登   陆</string>
    <string name="zhuce">注   册</string>
    <string name="zaicishuru">请再次输入密码</string>
    <string name="fanhui">返 回</string>
    <string name="bianji">编辑</string>
    <string name="biaoti">标题</string>
    <string name="yunbiji">云笔记</string>
    <string name="cexiao">撤销 |</string>
    <string name="gongji">共计</string>
    <string name="shanchu">| 删除</string>
    <string name="neirong">在此输入内容</string>
    <string name="publish">发布</string>
    <string name="delete">删除</string>
    <string name="yijidenglu">用户已登录，可以随时云同步</string>
    <string name="yijidengchu">用户已登出</string>
    <string name="weidenglu">用户未登录</string>
    <string name="qingxiandenglu">请先登录</string>
    <string name="meiyouwangluo">没有网络，请检查网络连接</string>
    <string name="shanchushuju">删除数据完成</string>
    <string name="dangqianwangluozhengc">当前网络正常，云同步后将同时删除云端数据和本地数据</string>
    <string name="dangqianwuwangluo">当前无网络,将删除本地数据</string>
    <string name="yuntongbuwancheng">云同步完成</string>
    <string name="biaotiheneirong">标题和内容不能为空</string>
    <string name="biaotiyjchunzai">标题已存在，请重新输入！</string>
    <string name="shujucunrubendi">数据已存入本地，请及时登录同步！</string>
    <string name="zhanghaobuneng">账号不能为空</string>
    <string name="mimabuneng">密码不能为空</string>
    <string name="liangcimima">两次密码不一致</string>
    <string name="zhucechenggong">注册成功，请返回登陆</string>
    <string name="zhuceshibai">注册失败，请检查网络连接或者更换账号名字再试试</string>
    <string name="dengluchenggong">登录成功</string>
    <string name="denglushibai">登录失败，请检查账号密码以及网络情况</string>
    <string name="tuichuchengxu">再按一次退出程序</string>
    <string name="shezhi">设置</string>
    <string name="xinceng">新增笔记</string>
    <string name="chakanbiji">查看笔记</string>
</resources>
