<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar_reg"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        app:popupTheme="@style/AppTheme.PopupOverlay">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="云笔记注册"
            android:textColor="#ffffff"
            android:textSize="24sp"
            android:paddingRight="10dp" />
    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user"
            android:textSize="28sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/et_reg_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/yonghuming"
            android:inputType="text"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mima"
            android:textSize="28sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/et_reg_passwordone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/shuru"
            android:inputType="textPassword"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingLeft="25dp"
        android:paddingRight="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mima"
            android:textSize="28sp"
            android:textStyle="normal|bold" />

        <EditText
            android:id="@+id/et_reg_passwordtwo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/zaicishuru"
            android:inputType="textPassword"
            android:textSize="25sp" />
    </LinearLayout>


    <Button
        android:id="@+id/btn_reg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/zhuce"
        android:textSize="30sp" />

    <Button
        android:id="@+id/btn_back"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/fanhui"
        android:textSize="30sp" />

</LinearLayout>
