<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:text="@string/xinceng"
        android:gravity="center"
        android:textSize="24sp"
        android:textColor="#fff"
        android:background="@color/colorPrimary"
        android:layout_height="?attr/actionBarSize" />

    <EditText
        android:padding="10dp"
        android:id="@+id/et_edit_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/biaoti"
        android:textSize="35sp" />

    <EditText
        android:padding="5dp"
        android:id="@+id/et_edit_content"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:hint="@string/neirong"
        android:textSize="20sp"
        android:gravity="top" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_edit_image"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_gallery" />

        <ImageView
            android:id="@+id/iv_edit_camera"
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@android:drawable/ic_menu_camera" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <Button
            android:id="@+id/btn_edit_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/publish" />
    </LinearLayout>
</LinearLayout>
