<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content_notes"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">


        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:theme="@style/AppTheme"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:weightSum="1">
            <TextView
                android:layout_width="match_parent"
                android:text="@string/yunbiji"
                android:textColor="#fdfdfe"
                android:gravity="center"
                android:layout_height="match_parent"
                android:textSize="24sp"/>
        </android.support.v7.widget.Toolbar>


        <RelativeLayout

            android:id="@+id/relative"
            android:layout_width="fill_parent"
            android:layout_height="50dp"
            android:background="@android:color/holo_blue_bright"
            android:gravity="bottom"
            android:visibility="gone">

            <Button
                android:id="@+id/btn_cancle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:background="@null"
                android:text="@string/cexiao"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtcount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/gongji"
                android:textSize="15sp" />

            <Button
                android:id="@+id/btn_delete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:background="@null"
                android:text="@string/shanchu"
                android:textSize="20sp" />


        </RelativeLayout>

        <ListView
            android:id="@+id/lv_notes"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        </ListView>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right"
        android:layout_margin="@dimen/fab_margin"
        android:src="@android:drawable/ic_input_add"
        app:elevation="5dp" />


</FrameLayout>
